--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - '80:80'
       - '443:443'
     restart: always
+    links:
+      - mysql
   mysql:
     image: mysql:5.7.29
     volumes:
